# iostreams

./: CMakeLists.txt  deps
iostreams/: CMakeLists.txt  zlib.cmake
iostreams/include/iostreams/: array.h  error.h  file.h  memory.h  stream.h
iostreams/include/iostreams/transform/: transform.h
iostreams/include/iostreams/transform/compression/: compression_level.h  gzip_transform.h  ungzip_transform.h  unzip_stream.h  zip_stream.h
iostreams/include/iostreams/transform/string_transform/: base64.h  hex.h  string_transform.h
iostreams/src/: array.cpp  file.cpp  memory.cpp  std_file.inl  stream.cpp  unix_file.inl  win_file.inl
iostreams/src/transform/compression/: compression_utils.h  gzip_transform.cpp  ungzip_transform.cpp  unzip_stream.cpp  zip.cpp  zip.h  zip_stream.cpp
iostreams/src/transform/string_transform/: base64.cpp  hex.cpp
tests/: CMakeLists.txt
tests/src/: array.cpp  base64.cpp  file.cpp  gzip_transform.cpp  hex.cpp  main.cpp  memory.cpp  stream_test.h  tests.h  transform_test.h  utils.cpp  utils.h
